# cleanurl

./: Makefile  README.md  TODO  pyproject.toml
src/: cleanurl.py  test_cleanurl.py
