[tool.poetry]
name = "cleanurl"
version = "0.1.15"
description = "Remove clutter from URLs and return a canonicalized version"
authors = ["Alexandru Cojocaru <hi@xojoc.pw>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/xojoc/cleanurl"
repository = "https://github.com/xojoc/cleanurl"
keywords = ['url', 'canonical']
classifiers = [
	    "Environment :: Web Environment",
	    "Intended Audience :: Developers",
	    "Operating System :: OS Independent",
	    "Typing :: Typed" ]

[tool.poetry.dependencies]
python = "^3.9"
langcodes = "^3.3.0"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"
pytest = "*"
black = {version = "*", allow-prereleases = true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
